<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/lightOrange"
    app:cardCornerRadius="15dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:lines="1"
            android:text="@string/addYourStudent"
            android:textColor="@color/blackOrange"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/warningTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto_light"
            android:text="@string/youShouldFillAllInformation"
            android:textColor="@color/red"
            android:textSize="14sp"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/id_material_card_view"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            app:cardBackgroundColor="@color/normal50Orange"
            app:cardCornerRadius="32dp"
            app:cardElevation="0dp"
            tools:visibility="visible">

            <TextView
                android:id="@+id/studentIdTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/blackOrange"
                android:textSize="32sp"
                tools:text="5" />

        </com.google.android.material.card.MaterialCardView>


        <EditText
            android:id="@+id/firstNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="@drawable/edittext_background"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/firstName"
            android:lines="1"
            android:minHeight="56dp"
            android:padding="16dp"
            android:textColor="@color/lightOrange"
            android:textColorHint="@color/lightOrange"
            android:textSize="16sp"
            tools:text="Abolfazl" />

        <EditText
            android:id="@+id/lastNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="@drawable/edittext_background"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/lastName"
            android:lines="1"
            android:minHeight="56dp"
            android:padding="16dp"
            android:textColor="@color/lightOrange"
            android:textColorHint="@color/lightOrange"
            android:textSize="16sp"
            tools:text="Rezaei" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveMaterialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_medium"
            android:minHeight="56dp"
            android:text="@string/save"
            android:textColor="@color/lightOrange"
            app:backgroundTint="@color/blackOrange"
            app:cornerRadius="15dp" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>